Refactor: #557 - .collect(Collectors.toList()) -> toList()로 변경